# MapleEngine

./: CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
Editor/: CMakeLists.txt
Editor/Source/: CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt
Engine/Source/: CMakeLists.txt  Engine.cpp  Engine.h
Engine/Source/Application/: CMakeLists.txt
Engine/Source/Application/Private/Application/: Application.cpp  ApplicationLog.cpp  Window.cpp
Engine/Source/Application/Private/Application/Platform/: WindowFactory.cpp  WindowFactory.h
Engine/Source/Application/Private/Application/Platform/SDL3/: SDL3Window.cpp  SDL3Window.h
Engine/Source/Application/Public/Application/: Application.h  ApplicationAPI.h  ApplicationExport.h  ApplicationLog.h  GraphicsAPI.h  PlatformBackend.h  PlatformOS.h  RendererBackend.h  Window.h
Engine/Source/Application/Public/Application/Platform/: Window.h
Engine/Source/Core/: CMakeLists.txt
Engine/Source/Core/Private/Core/: Application.cpp  Engine.cpp  Log.cpp
Engine/Source/Core/Private/Core/Platform/: WindowFactory.cpp  WindowFactory.h
Engine/Source/Core/Private/Core/Platform/SDL3/: SDL3Window.cpp  SDL3Window.h
Engine/Source/Core/Public/Core/: API.h  Application.h  CoreAPI.h  CoreExport.h  Engine.h  GraphicsAPI.h  Log.h  PlatformBackend.h  RendererBackend.h
Engine/Source/Core/Public/Core/Platform/: Window.h
Engine/Source/Platform/: CMakeLists.txt
Engine/Source/Platform/Private/Platform/: PlatformLog.cpp  Window.cpp
Engine/Source/Platform/Public/Platform/: GraphicsAPI.h  PlatformAPI.h  PlatformExport.h  PlatformLog.h  PlatformOS.h  Window.h
Engine/Source/RHI/: CMakeLists.txt
Engine/Source/RHI/Private/RHI/: RHI.cpp  RHILog.cpp
Engine/Source/RHI/Private/RHI/Vulkan/: VulkanRHI.cpp  VulkanRHI.h
Engine/Source/RHI/Public/RHI/: RHI.h  RHIAPI.h  RHIExport.h  RHILog.h
Engine/Source/Renderer/: CMakeLists.txt
Engine/Source/Renderer/Private/Renderer/: Renderer.cpp  RendererLog.cpp
Engine/Source/Renderer/Public/Renderer/: Renderer.h  RendererExport.h  RendererLog.h
